# morphs

./: .gitignore  Makefile  README.md  go.work  go.work.sum
components/ai/agents/: Makefile  basic.go  default.go  go.mod  go.sum
components/ai/agents/wit/: deps.toml  world.wit
components/ai/contexts/: Makefile  go.mod  go.sum  inmemory.go
components/ai/contexts/wit/: deps.toml  (+1 more)
components/ai/models/: Makefile  build_gpt-oss.go  build_llama-3-1.go  build_llama3.go  build_noop.go  build_qwen-2-5.go  build_qwen-3.go  build_qwen.go  comptime-format.go  format.go  go.mod  go.sum  llama-3.1.go  llama-3.1_test.go  llama-31_export.go  models.go  runtime_llama3.go  runtime_noop.go
components/ai/runners/: Makefile  cli.go  default.go  go.mod  go.sum  http.go  writer.go
components/ai/tools/: Makefile  go.mod  go.sum  tools.go
components/examples/agents/: Makefile  cli.go  go.mod  go.sum  http.go
components/examples/hello-world/: Makefile  go.mod  main.go
components/http/client/: Makefile  go.mod  go.sum
components/mcp/auth/: Makefile  auth.go  build_noop.go  build_ory.go  go.mod  go.sum
components/mcp/tools/: go.mod  go.sum  tools.go
components/util/datetime/: Cargo.toml  go.mod
components/util/datetime/crates/datetime-imports/: Cargo.toml
components/util/datetime/crates/datetime-imports/src/: bindings.rs  lib.rs
components/util/datetime/pkg/datetime/: datetime.go
components/util/datetime/src/: bindings.rs  lib.rs
compositions/: basic-agent.wac  default-agent-cli.wac  default-agent-http.wac  default-agent-server.wac  default-agent.wac  mcp-server.wac
(+56 files in other folders)
