[package]
name = "datetime"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "hayride:datetime"

[package.metadata.component.target]
world = "exports"

[package.metadata.component.dependencies]
